--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
 <head> 
 	<meta charset="UTF-8">
 	<title>Karma</title>
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <nav class="top-navigation">
 	<div class="content">
-		<img class="logo" src="images/karma-logo.svg" alt="Karma" width="26" style="margin-left: 14px; height: 70px;">
+	<ul class="links">
+	<li class="active">Meet Karma</li>
+	<li>How It Works</li>
+	<li>Store</li>
+	<li>Blog</li>
+	<li>Help</li>
+	<li>Log In</li>
+	</ul>
+		<img class="logo" src="images/karma-logo.svg" alt="Karma" width="26" style="height: 70px;">		
 	</div>
-
+</nav>
 </body>
 </html>
