--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 <div class="content">
 <h1>Introduction Karma</h1>
 <h3>Bring WiFi with you, everywhere you go.</h3>
+<div class="buttons">
+<button>Learn More</button>
 </div>
 </section>
 </body>
