--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 <div class="buttons">
 <button>Learn More</button>
 </div>
+</div>
+</section>
+<section class="cases">
+<div class="content">
+	<h2>Everyone needs a little Karma</h2>
 </section>
 </body>
 </html>
