--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Karma</title>
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+	<!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+	<link href="css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -16,43 +18,64 @@
 	<li>Store</li>
 	<li>Blog</li>
 	<li>Help</li>
-	<li>Log In</li>
+	<li>Login</li>
 	</ul>
-		<img class="logo" src="images/karma-logo.svg" alt="Karma" width="26" style="height: 70px;">		
+		<img class="logo" src="images/karma-logo.svg" alt="Karma" width="26">		
 	</div>
 </nav>
 <section class="introduction">
-<div class="content">
-<h1>Introduction Karma</h1>
-<h3>Bring WiFi with you, everywhere you go.</h3>
-<div class="buttons">
-<button>Learn More</button>
-</div>
-</div>
+	<div class="content">
+		<h1>Introduction Karma</h1>
+		<h3>Bring WiFi with you, everywhere you go.</h3>
+	<div class="buttons">
+		<button>Learn More</button>
+	</div>
+	</div>
 </section>
 <section class="cases">
-<div class="content">
-	<h2>Everyone needs a little Karma</h2>
-	<ul class="devices">
-	<li>
-	<img width="127" height="127" src="images/icon-devices.svg" alt="Internet for all devices image">
-	<div class="caption">
-	<h3>Internet for all devices</h3>
-	</div>
-	</li>
-	<li>
-	<img width="127" height="127" src="images/icon-coffee.svg" alt="Boost your productivity image">
-	<div class="caption">
-	<h3>Boost your productivity</h3>
-	</div>
-	</li>
-	<li>
-	<img width="127" height="127" src="images/icon-refill.svg" alt="Pay as You Go image">
-	<div class="caption">
-	<h3>Pay as You Go</h3>
-	</div>
-	</li>
+	<div class="content">
+		<h2>Everyone needs a little Karma</h2>
+			<ul class="devices">
+			<li>
+				<img width="127" height="127" src="images/icon-devices.svg" alt="Internet for all devices image">
+			<div class="caption">
+		<h3>Internet for all devices</h3>
+			</div>
+			</li>
+			<li>
+				<img width="127" height="127" src="images/icon-coffee.svg" alt="Boost your productivity image">
+			<div class="caption">
+		<h3>Boost your productivity</h3>
+			</div>
+			</li>
+			<li>
+				<img width="127" height="127" src="images/icon-refill.svg" alt="Pay as You Go image">
+			<div class="caption">
+		<h3>Pay as You Go</h3>
+			</div>
+			</li>
 	</div>
 </section>
 </body>
+<footer class="social">
+	<div class="content">
+		<hr>
+		<h5>Join us on</h5>
+		<ul class="icons">
+			<li class="twitter">
+				<i class="fa fa-twitter"></i>
+			</li>
+			<li class="facebook">
+				<i class="fa fa-facebook"></i>
+			</li>
+			<li class="instagram">
+				<i class="fa fa-instagram"></i>
+			</li>
+		</ul>
+		<span class="copy">
+			© Karma Mobility, Inc.
+		</span>
+	</div>
+</footer>					
+
 </html>
