--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </nav>
 <section class="introduction">
 	<div class="content">
-		<h1>Introduction Karma</h1>
+		<h1>Introducing Karma</h1>
 		<h3>Bring WiFi with you, everywhere you go.</h3>
 	<div class="buttons">
 		<button>Learn More</button>
