--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href="css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="shortcut icon" type="image/x-icon"  href="favicon_name.ico">
 </head>
 <body>
 <nav class="top-navigation">
